# codex-dirigent

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Codex-Dirigent-OpenAI-Build-Week-Participation-Brief.docx  build-week-evidence.md  reference-audit.md  verification.md
packaging/: Info.plist
scripts/: bundle-macos.sh  package-release-macos.sh
src/: app.rs  board.rs  codex.rs  cue.rs  lib.rs  main.rs  review.rs  settings.rs  theme.rs  workspace.rs
tests/: workflow.rs
