[package]
name = "codex-dirigent"
version = "0.1.0"
edition = "2024"
description = "A focused native macOS workflow for reviewing Codex CLI changes"
license = "MIT"
rust-version = "1.92"

[dependencies]
blake3 = "=1.8.2"
eframe = "=0.34.1"
rfd = "=0.17.2"
serde_json = "=1.0.149"
shlex = "=1.3.0"
thiserror = "=2.0.18"

[dev-dependencies]
tempfile = "=3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
